--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -33,6 +33,8 @@ jobs:
 
   linux:
     runs-on: ubuntu-latest
+    container:
+      image: lazypanda07/ubuntu_cxx20:24.04
 
     steps:
     - uses: actions/checkout@v4
